--- a/style.css
+++ b/style.css
@@ -348,7 +348,7 @@ footer > .logo {
     font-weight: 300;
   }
   .header-bottom {
-    margin: 200px 0 200px 0;
+    margin: 10vh 0;
   }
 
   .section-1 {
